# DFWorX

./: .eslintrc.js  .gitignore  BUILD_FIXES_COMPLETE.md  PROJECT_PLAN.md  README.md  SETUP_COMPLETE.md  package.json  pnpm-lock.yaml  test-connections.ts  tsconfig.json  turbo.json
.claude/: chat-compact-01.md  chat-compact-02.md
.github/workflows/: ci.yml  ci.yml.bak
apps/web/: .env.example  README.md  next.config.js  package.json  tailwind.config.ts
convex/: schema.ts  tsconfig.json
docs/: .error-msgs.md  PHASE_01_SUMMARY.md  QUICK-REFERENCE.md  SETUP_CHECKLIST.md  SETUP_GUIDE.md  architecture.md  blog-app-guide.md  chat-usage.md  data-architecture-diagram.md  data-management.md  main-tools.md  monorepo-comparison.md  workspace.md
docs/drafts/: InvDashboard.xlsx  coolify-mcp.md  node-editor.md  secrets-data-model.csv  secrets-draft.csv
docs/setup-docs/: SETUP_ACTIONS.md
infrastructure/coolify/: README.md  api.json  web.json
infrastructure/docker/: .env.example  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
infrastructure/supabase/: seed.sql
scripts/: build-all.sh  clean.sh  deploy.sh  dev.sh  lint.sh  setup.sh  test-all.sh
services/auth-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/auth-service/src/: config.py  main.py
services/auth-service/src/auth/: models.py  router.py  service.py
services/auth-service/src/auth/tests/: test_service.py
services/auth-service/src/database/: connection.py
supabase/.temp/: project-ref
supabase/migrations/: 001_shared_schema.sql  (+2 more)
(+7 files in other folders)
